# qtConsole

./: CMakeLists.txt  README.md  console_reader.cpp  main.cpp
